--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body{ background-color: rgb(236, 233, 230)}
     text-shadow: 3px 3px 2px  rgb(90, 88, 88);
 }
 .imgRedes{width: 50%;}
-
+.text-muted{color: #ffffff!important;}
 
 @media (min-width: 992px){
     .ms-lg-4 {
@@ -19,8 +19,13 @@ body{ background-color: rgb(236, 233, 230)}
         font-size: 1.6rem;}
     .navbar-expand-lg .navbar-nav .nav-link {
        margin-left: 2.5rem;
-       border: 1px solid rgb(183, 183, 183);
-       border-radius: 5px;}
+       border: 2px ridge rgba(228, 226, 226, 0.608);
+       border-radius: 5px;background-color: rgba(145, 143, 141, 0.36);
+    }
        
-    .navbar-expand-lg .navbar-nav .nav-link:hover{ background-color: rgb(78, 82, 85) ;border: 2px solid rgb(37, 31, 31);}
-}
+    .navbar-expand-lg .navbar-nav .nav-link:hover{ 
+        background-color: rgb(238, 172, 59) ;
+        box-shadow: 2px 2px 4px 1px rgb(0, 0, 0);border: 2px solid rgb(59, 55, 55);
+        
+    }
+}  
