--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body{ background-color: rgb(236, 233, 230)}
         font-size: 1.6rem;}
     .navbar-expand-lg .navbar-nav .nav-link {
        margin-left: 2.5rem;
-       border: 2px ridge rgba(228, 226, 226, 0.608);
+       border-bottom: 2px  ridge rgba(228, 226, 226, 0.608);
        border-radius: 5px;background-color: rgba(145, 143, 141, 0.36);
     }
        
